wk_taa_taaqa/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AD_Approve_FSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval of FSR account requests</description>
        <label>AD Approve FSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_FSR_Account_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AD FSR Account Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_FSR_Account_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FSR account requests rejection</description>
        <label>AD FSR Account Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_ISR_Account_Aprove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AD ISR Account Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_ISR_Account_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AD ISR Account Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_New_Segment__c</fullName>
        <label>AD New Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AD_New_Sub_Segment__c</fullName>
        <label>AD New Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>2-4 Total Employees</fullName>
                </value>
                <value>
                    <fullName>5-9 Total Employees</fullName>
                </value>
                <value>
                    <fullName>10-19 Total Employees</fullName>
                </value>
                <value>
                    <fullName>20-49 Total Employees</fullName>
                </value>
                <value>
                    <fullName>50-99 Total Employees</fullName>
                </value>
                <value>
                    <fullName>100+ Total Employees</fullName>
                </value>
                <value>
                    <fullName>Top 100 Firms</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Dept of Agriculture</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce</fullName>
                </value>
                <value>
                    <fullName>Dept of Defense</fullName>
                </value>
                <value>
                    <fullName>Dept of Energy</fullName>
                </value>
                <value>
                    <fullName>Dept of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Dept of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Dept of Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Dept of Interior</fullName>
                </value>
                <value>
                    <fullName>Dept of Justice</fullName>
                </value>
                <value>
                    <fullName>Dept of Labor</fullName>
                </value>
                <value>
                    <fullName>Dept of State</fullName>
                </value>
                <value>
                    <fullName>Dept of Treasury (not IRS)</fullName>
                </value>
                <value>
                    <fullName>Dept of Vet Affairs</fullName>
                </value>
                <value>
                    <fullName>EEOC</fullName>
                </value>
                <value>
                    <fullName>Exec Branch (White House)</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>FDIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AD_Request_date__c</fullName>
        <label>AD Request date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AD_Ticket_Number__c</fullName>
        <label>AD Ticket Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AD User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AISR__c</fullName>
        <label>Books &amp; Journals DTN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Credit_Hold_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS_Credit_Hold Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Credit_Hold_Rollup__c</fullName>
        <label>AMS Credit Hold Rollup</label>
        <summaryFilterItems>
            <field>Account_X_Reference__c.AMS_Credit_Hold__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_X_Reference__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AMS_Credit_Hold__c</fullName>
        <formula>IF( AMS_Credit_Hold_Rollup__c &gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Service_Bureau_Account_Rollup__c</fullName>
        <label>AMS Service Bureau Account Rollup</label>
        <summaryFilterItems>
            <field>Account_X_Reference__c.AMS_Special_Agreement__c</field>
            <operation>equals</operation>
            <value>S</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_X_Reference__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AMS_X_References__c</fullName>
        <label>AMS X References</label>
        <summaryFilterItems>
            <field>Account_X_Reference__c.Application__c</field>
            <operation>equals</operation>
            <value>AMS</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_X_Reference__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ARM_National_Account__c</fullName>
        <inlineHelpText>If this account purchases ARM through a National Account, the National Account name is listed here.</inlineHelpText>
        <label>ARM National Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BDO Alliance</fullName>
                </value>
                <value>
                    <fullName>BDO Client</fullName>
                </value>
                <value>
                    <fullName>BDO Client International</fullName>
                </value>
                <value>
                    <fullName>Cohn Reznick</fullName>
                </value>
                <value>
                    <fullName>Crowe Horwath</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>McGladrey Client</fullName>
                </value>
                <value>
                    <fullName>McGladrey Network</fullName>
                </value>
                <value>
                    <fullName>Moss Adams</fullName>
                </value>
                <value>
                    <fullName>UHY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATA_ATX_TW_Retention_Owner_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by ATX_TW_Retention_Owner__c</description>
        <label>ATA ATX/TW Retention Owner DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Corp_Software_Retention_Owner_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by Corp_Software_Retention_Owner__c</description>
        <label>ATA Corp Software Retention Owner DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Corporate_Software_New_Sales_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by Corporate_Software_New_Sales__c</description>
        <label>ATA Corporate Software New Sales DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_PFX_Axcess_Retention_Owner_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by PFX_Axcess_Retention_Owner__c</description>
        <label>ATA PFX/Axcess Retention Owner DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_R_L_New_Sales_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by R_L_New_Sales__c</description>
        <label>ATA R&amp;L New Sales DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_R_L_Retention_Owner_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by R_L_Retention_Owner__c</description>
        <label>ATA R&amp;L Retention Owner DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Solution_Consultant_DTN__c</fullName>
        <description>DTN of the Solution Consultant Team Member</description>
        <label>ATA Solution Consultant DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_TAA_Software_New_Sales_DTN__c</fullName>
        <description>DTN of the team member derived by TAA_Software_New_Sales__c</description>
        <label>ATA TAA Software New Sales DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Trust_Sales_DTN__c</fullName>
        <description>DTN of the Account Team Member derived by Trust_Sales__c</description>
        <label>ATA Trust Sales DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATX_TW_Retention_Owner__c</fullName>
        <formula>IF( Named_Account__c ,
	IF( ISPICKVAL( Named_Account_Type__c , &quot;Small Firm Premier&quot;), &quot;Premier Retention&quot;, &quot;&quot;),
	IF( Small_Firm_Customer__c  , &quot;Small Firms Retention&quot;, &quot;&quot; )
)</formula>
        <label>ATX/TW Retention Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18-digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_and_Audit_Total__c</fullName>
        <label>Accounting and Audit Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Data_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Indirect__c</fullName>
        <formula>IF((Has_Compliance_Services__c = TRUE || Has_POS_Tax_Portal__c = TRUE || Has_Sales_Tax_Office__c = TRUE || Has_SureTax__c = TRUE || Has_Utility_DB_Lokup_RADAR_Flag__c = TRUE || Has_Database_Lookup_RADAR__c = TRUE || Has_Returns__c = TRUE || Has_Sales_Tax_Online_CORE__c = TRUE || Has_Telecom_DB_Lookup_RADAR_Flag__c = TRUE || Has_Load_Utilities__c = TRUE),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Research__c</fullName>
        <formula>IF((Has_COMPL1_Master_Tax_Guide__c = TRUE || Has_PROP1_PTP_Core_TPP__c = TRUE || Has_PROS4_Standard_FED__c = TRUE || Has_TAX0_TRC_and_FED__c = TRUE || Has_CORPC_MTG_PTP_3_Full_or_5_Lite_Stat__c = TRUE || Has_CORPS2_MTG_FED_TRC_All_States_Mu__c = TRUE || Has_International_Tax__c = TRUE || Has_Schools__c = TRUE || Has_CCH_Expert_Treatises__c = TRUE || Has_Entity_Planning__c = TRUE || Has_Learning_and_Seminars__c = TRUE || Has_COMPL2_PTE_Single_TPP__c = TRUE || Has_PROT2_TRC_Lite_Core_TPP__c = TRUE || Has_PROT5_TRC_Federal_TPP_1_State__c = TRUE || Has_TAX1_TRC_FED_Federal_TPP_1_State__c = TRUE || Has_CORPP_MTG_TRC_50_States_Lite_Forms__c = TRUE || Has_State_Tax_Specialty__c = TRUE || Has_Specialty_Planning__c = TRUE || Has_Tax_Prep_Partner__c = TRUE || Has_Journals__c = TRUE || Has_ClientRelate__c = TRUE || Has_Federal_Add_Ons__c = TRUE || Has_COMPL3_PTE_Core_TPP__c = TRUE || Has_PROT3_TRC__c = TRUE || Has_PROS6_FED_Federal_TPP_1_State__c = TRUE || Has_TAX2A_TRC_FED_Fed_TPP_1_State_Enti__c = TRUE || Has_CORPS1_MTG_FED_TRC_50_States_Full__c = TRUE || Has_State_Tax_Reporters__c = TRUE || Has_IntelliForms__c = TRUE || Has_Financial_and_Estate_Tax__c = TRUE || Has_Accounting_Auditing_Internet__c = TRUE || Has_ARM__c = TRUE || Has_R_L_Renewal_Only__c = TRUE),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_SFS_Inventory__c</fullName>
        <label>Active SFS Inventory</label>
        <summarizedField>SFS_Asset__c.Price__c</summarizedField>
        <summaryFilterItems>
            <field>SFS_Asset__c.Status__c</field>
            <operation>equals</operation>
            <value>purchased</value>
        </summaryFilterItems>
        <summaryForeignKey>SFS_Asset__c.Account_c__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_SFS__c</fullName>
        <formula>Has_ATX__c = true ||
 Has_IFirm__c = true ||
Has_SFS_Research__c = true ||
Has_TaxWise__c = true ||
Has_SFS_Other_Ancillary__c = true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active SFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Software__c</fullName>
        <formula>IF((Has_Tax__c = TRUE || Has_Axcess_Tax__c = TRUE || Has_GFX__c = TRUE || Has_Outsource__c = TRUE || Has_Scan__c = TRUE || Has_Scan_SaaS__c = TRUE ||  Has_PDFlyer__c = TRUE ||  Has_Fixed_Assets__c = TRUE ||  Has_Practice_Management__c = TRUE || Has_Axcess_Practice__c = TRUE || Has_Practice__c = TRUE ||  Has_Practice_Manager__c = TRUE || Has_Axcess_Workstream__c = TRUE ||  Has_Knowledge_Connect__c = TRUE || Has_Axcess_Document__c = TRUE ||  Has_Document_On_Premise__c = TRUE || Has_Document_ASP__c = TRUE || Has_Document__c = TRUE || Has_Portal_SaaS__c = TRUE || Has_Engagement__c = TRUE || Has_Knowledge_Tools__c = TRUE || Has_Trial_Balance__c = TRUE || Has_Knowledge_Coach__c = TRUE || Has_Active_Data__c = TRUE ||Has_Fixed_Assets_Manager_OP__c = true || Has_Fixed_Assets_Manager_SaaS__c = true),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Ons_Total__c</fullName>
        <label>Add-Ons Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Competitor_End_Date__c</fullName>
        <label>Audit Competitor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Competitor__c</fullName>
        <label>Audit Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage Audit</fullName>
                </value>
                <value>
                    <fullName>BDO - APT</fullName>
                </value>
                <value>
                    <fullName>BDO - COMPASS</fullName>
                </value>
                <value>
                    <fullName>BNA</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>McGladrey &amp; Pullen</fullName>
                </value>
                <value>
                    <fullName>Miller</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pfx - Knowledge Coach</fullName>
                </value>
                <value>
                    <fullName>Pfx - Knowledge Tools</fullName>
                </value>
                <value>
                    <fullName>PPC - Smart Disclosure</fullName>
                </value>
                <value>
                    <fullName>PPC - Smart Field Work</fullName>
                </value>
                <value>
                    <fullName>PPC - Smart IFRS Disclosure</fullName>
                </value>
                <value>
                    <fullName>PPC - Smart Internal Control</fullName>
                </value>
                <value>
                    <fullName>PPC - Smart Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>PPC - Smart Single Audit</fullName>
                </value>
                <value>
                    <fullName>PPC CD</fullName>
                </value>
                <value>
                    <fullName>PPC Electronic</fullName>
                </value>
                <value>
                    <fullName>PPC ePractice Aids</fullName>
                </value>
                <value>
                    <fullName>PPC eTools</fullName>
                </value>
                <value>
                    <fullName>PPC Paper</fullName>
                </value>
                <value>
                    <fullName>PPC Smart Practice Aides</fullName>
                </value>
                <value>
                    <fullName>PPC Web</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autoflow_Downloaded__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Updated monthly</inlineHelpText>
        <label>Autoflow Downloaded</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autoflow_Purchased__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Updated monthly</inlineHelpText>
        <label>Autoflow Purchased</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autoflow_Remaining__c</fullName>
        <formula>Autoflow_Purchased__c - Autoflow_Downloaded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated monthly</inlineHelpText>
        <label>Autoflow Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>